# plotreader

./: .gitignore  README.md  pyproject.toml
output/: llama_parsed_paper.md  parsed_paper.md  sherpa_parsed_paper.md
output/opsin_characterization_20240913_132953/: peak_photocurrents_data.csv  spectral_sensitivity_data.csv  spike_fidelity_data.csv
plotreader/: __init__.py  document.py  generator.py  prompt.py  util.py
plotreader/generator/: agent.py
plotreader/reader/: data.py
plotreader/utils/: __init__.py  base.py  document.py
plotreader/utils/structured_types/: data.py  experiment.py  figure.py  opsin.py  paper.py
sandbox/: agent_testing_full_paper.ipynb  direct_anthropic_calls.ipynb  figqa_test.ipynb  figure_reading.ipynb  huggingface_qa_calls.ipynb  ingestion_pipelines.ipynb  matplotlib_indexer.ipynb  memory_workflow_sketch.ipynb  memory_workflow_sketch_pruned.ipynb  panel_cropping_test.ipynb  retriever_testing.ipynb  run_plotgen.py  scientific_paper_doc_handler.ipynb  structured_output.ipynb  whole_paper_rag.ipynb  workflow.ipynb
