[project]
name = "plotreader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llama-index>=0.11.3",
    "ipykernel>=6.29.5",
    "llama-index-tools-code-interpreter>=0.2.0",
    "python-dotenv==1.0.1",
    "requests>=2.32.3",
    "nest-asyncio>=1.6.0",
    "llama-index-llms-anthropic>=0.3.0",
    "llama-index-packs-agents-coa>=0.2.0",
    "dspy-ai>=2.4.14",
    "llama-index-readers-github>=0.2.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-languages>=1.10.2",
    "tree-sitter-python>=0.23.2",
    "datasets>=3.0.0",
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
    "scipy>=1.14.1",
    "pillow>=10.4.0",
    "llama-index-multi-modal-llms-anthropic>=0.2.2",
    "transformers>=4.44.2",
    "torch>=2.4.1",
    "llama-index-program-evaporate>=0.2.0",
    "llama-parse>=0.5.5",
    "llmsherpa>=0.1.4",
    "groundx-python-sdk>=1.3.23",
    "llama-index-agent-introspective>=0.2.0",
    "llama-index-postprocessor-cohere-rerank>=0.2.1",
    "tabulate>=0.9.0",
    "imageio>=2.35.1",
    "opencv-python>=4.10.0.84",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
